DFG ConvertThis speculation logic is wrong https://bugs.webkit.org/show_bug.cgi?id=69663

Reviewed by Oliver Hunt.

* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::fixupNode):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/85730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96980 268f45cc-cd09-0410-ab3c-d52691b4dbfc